kubernetes/main/apps/observability/blackbox-exporter/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  annotations:
    external-dns/unifi: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Blackbox Exporter for Prometheus
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: mdi-eye
    gethomepage.dev/name: Blackbox Exporter
    gethomepage.dev/pod-selector: app.kubernetes.io/name=prometheus-blackbox-exporter
spec:
  hostnames:
    - blackbox-exporter.techtales.io
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: blackbox-exporter
          port: 9115
      matches:
        - path:
            type: PathPrefix
            value: /
